--- a/.github/workflows/build-deploy-webapp.yml
+++ b/.github/workflows/build-deploy-webapp.yml
@@ -20,7 +20,7 @@ env:
   AWS_REGION: ap-southeast-1
   ECR_REPOSITORY: airbyte
   AWS_ACCOUNT_ID: "321036660250"
-
+  SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
 jobs:
   build-image:
     name: Build and Push Docker image
@@ -94,3 +94,28 @@ jobs:
           echo "image-registry=$ECR_REGISTRY" >> $GITHUB_OUTPUT
           echo "image-name=$ECR_REPOSITORY" >> $GITHUB_OUTPUT
           echo "image-tag=$IMAGE_TAG" >> $GITHUB_OUTPUT
+  deploy:
+    needs: build-image
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout K8s Config Repo
+        uses: actions/checkout@v2
+      - name: Trigger Workflow in ArgoCD Apps Manifest Repository
+        run: |
+          repo_owner="narendracode" 
+          repo_name="example-assets"  
+          event_type="trigger-workflow-airbyte" 
+          target_env="dev"
+          target_image_registry="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com"
+          target_image_repository="${{ needs.build-image.outputs.image-name }}"
+          target_image_version="${{ needs.build-image.outputs.image-tag }}"
+          target_app="airbyte"
+          echo "Debug Outputs : $target_image_registry"
+
+          curl -L \
+            -X POST \
+            -H "Accept: application/vnd.github+json" \
+            -H "Authorization: Bearer ${{ secrets.PAT }}" \
+            -H "X-GitHub-Api-Version: 2022-11-28" \
+            https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
+            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"target_env\": \"$target_env\", \"target_image_registry\": \"$target_image_registry\", \"target_image_repository\": \"$target_image_repository\", \"target_image_version\": \"$target_image_version\", \"target_app\": \"$target_app\", \"unit\": false, \"integration\": true}}"
