--- a/.github/workflows/build-deploy-webapp.yml
+++ b/.github/workflows/build-deploy-webapp.yml
@@ -36,7 +36,7 @@ jobs:
         uses: act10ns/slack@v2
         with:
           status: Build and Push Docker image
-          channel: '#actuals-infra'
+          channel: "#actuals-infra"
           message: Starting to build and push docker image
         if: always()
       - name: Configure AWS credentials
@@ -105,32 +105,32 @@ jobs:
       - name: Send Slack Notification Complete(APP-BE)
         uses: act10ns/slack@v2
         with:
-          channel: '#actuals-infra'
+          channel: "#actuals-infra"
           status: ${{ job.status }}
           steps: ${{ toJson(steps) }}
         if: always()
-  deploy:
-    needs: build-image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout K8s Config Repo
-        uses: actions/checkout@v2
-      - name: Trigger Workflow in ArgoCD Apps Manifest Repository
-        run: |
-          repo_owner="narendracode" 
-          repo_name="example-assets"  
-          event_type="trigger-workflow-airbyte" 
-          target_env="dev"
-          target_image_registry="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com"
-          target_image_repository="${{ needs.build-image.outputs.image-name }}"
-          target_image_version="${{ needs.build-image.outputs.image-tag }}"
-          target_app="airbyte"
-          echo "Debug Outputs : $target_image_registry"
+  # deploy:
+  #   needs: build-image
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout K8s Config Repo
+  #       uses: actions/checkout@v2
+  #     - name: Trigger Workflow in ArgoCD Apps Manifest Repository
+  #       run: |
+  #         repo_owner="narendracode"
+  #         repo_name="example-assets"
+  #         event_type="trigger-workflow-airbyte"
+  #         target_env="dev"
+  #         target_image_registry="$AWS_ACCOUNT_ID.dkr.ecr.$AWS_REGION.amazonaws.com"
+  #         target_image_repository="${{ needs.build-image.outputs.image-name }}"
+  #         target_image_version="${{ needs.build-image.outputs.image-tag }}"
+  #         target_app="airbyte"
+  #         echo "Debug Outputs : $target_image_registry"
 
-          curl -L \
-            -X POST \
-            -H "Accept: application/vnd.github+json" \
-            -H "Authorization: Bearer ${{ secrets.PAT }}" \
-            -H "X-GitHub-Api-Version: 2022-11-28" \
-            https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
-            -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"target_env\": \"$target_env\", \"target_image_registry\": \"$target_image_registry\", \"target_image_repository\": \"$target_image_repository\", \"target_image_version\": \"$target_image_version\", \"target_app\": \"$target_app\", \"unit\": false, \"integration\": true}}"
+  #         curl -L \
+  #           -X POST \
+  #           -H "Accept: application/vnd.github+json" \
+  #           -H "Authorization: Bearer ${{ secrets.PAT }}" \
+  #           -H "X-GitHub-Api-Version: 2022-11-28" \
+  #           https://api.github.com/repos/$repo_owner/$repo_name/dispatches \
+  #           -d "{\"event_type\": \"$event_type\", \"client_payload\": {\"target_env\": \"$target_env\", \"target_image_registry\": \"$target_image_registry\", \"target_image_repository\": \"$target_image_repository\", \"target_image_version\": \"$target_image_version\", \"target_app\": \"$target_app\", \"unit\": false, \"integration\": true}}"
